--- a/theminimart-mobile/package.json
+++ b/theminimart-mobile/package.json
@@ -23,7 +23,10 @@
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
-    "react-native-qrcode-svg": "^6.3.15"
+    "react-native-qrcode-svg": "^6.3.15",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
